# fyp

./: .gitignore  .gitmodules  .mapping.osa  CITATION.cff  CameraTrajectory.txt  KeyFrameTrajectory.txt  README.md  Trajectory.txt  typescript
Installation Guide/: Camera_calibration.md  install V3 FINAL V2.md
Installation Guide/assets/: calibrator.py  camera_calibrator.py
assets/: Installation_guide.md  project_components.md
assets/misc/: Camera_calibration.md  install_ROS2_foxy FINAL V2.md
camera/arduino/CameraWebServer/: CameraWebServer.ino  app_httpd.cpp
camera/camera_calibration/: README.md  publish_stereo.py
camera/camera_calibration/calibration_result/: ost.txt  result.txt  right.yaml
camera/camera_calibration/calibration_result/calibrationdata/: left.yaml  ost.txt  right.yaml
camera/camera_calibration/calibration_result/old/: ost.txt  result.txt
camera/camera_calibration/calibration_result/old/calibrationdata/: left.yaml  right.yaml
camera/camera_calibration/latest_calibration_result_pinhole/: calibration_result.txt  left.yaml  ost.txt
camera/camera_calibration/latest_calibration_result_pinhole/calibrationdata/: right.yaml
camera/camera_calibration/ros2_foxy/: README.md  publish_stereo_foxy.py
camera/camera_calibration/ros2_foxy/assets/camera_calibration/: calibrator.py
camera/camera_calibration/ros2_rolling/: README.md  camera_calibration_rolling.py
config/rgbd/rviz/: d435_orbslam3_rgbd.rviz
config/rgbd/settings/: D435-D.yaml
config/stereo/: Esp32s.yaml  kitti_no_imu.rviz  kitti_orbslam3_no_imu.rviz  orb_slam3_no_imu.rviz  orbslam3_no_imu.rviz  publish_stereo.py  ros2_orb_slam3_no_imu.rviz  stereo_calibration.yaml
config/stereo/rviz/: d435_orb_slam3_stereo.rviz  esp32_orb_slam3_stereo.rviz  kitti_orbslam3_no_imu.rviz  stereo_orbslam3_no_imu.rviz
config/stereo/settings/: D435-S.yaml  KITTI00-02.yaml  KITTI03.yaml  KITTI04-12.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/envision_pointcloud_to_grid/lib/envision_pointcloud_to_grid/: goal_publisher  navigation_node  pointcloud_to_occupancy_node
install/envision_pointcloud_to_grid/share/envision_pointcloud_to_grid/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/envision_pointcloud_to_grid/share/envision_pointcloud_to_grid/launch/: create_occupancy.launch.py  goal_publisher.launch.py  navigation.launch.py
install/pointcloud_to_grid/share/pointcloud_to_grid/: package.dsv  package.ps1  package.sh
install/stereo_camera_pipeline/lib/stereo_camera_pipeline/: stereo_ip_publisher  stereo_processor_node  stereo_rectifier_node
install/stereo_camera_pipeline/share/stereo_camera_pipeline/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/stereo_camera_pipeline/share/stereo_camera_pipeline/config/: stereo_calibration.yaml
install/stereo_camera_pipeline/share/stereo_camera_pipeline/launch/: stereo_pipeline.launch.py
install/stereo_obstacle_detector/lib/stereo_obstacle_detector/: stereo_detector_node
install/stereo_obstacle_detector/share/stereo_obstacle_detector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/stereo_obstacle_detector/share/stereo_obstacle_detector/launch/: stereo_detector.launch.py
installation_guide/assets/old/: calibrator.py  camera_calibrator.py  stereo_calibrator.py
log/: latest_build
ros_ws/: .mapping.osa
ros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_ws/install/orbslam3/lib/orbslam3/: camera_publisher.py  mono  rgbd  stereo  stereo-inertial  url_camera_publisher.py
ros_ws/log/: latest_build
ros_ws/src/envision_interfaces/: CMakeLists.txt  package.xml
ros_ws/src/envision_interfaces/msg/: ObstacleStatus.msg
ros_ws/src/envision_pointcloud_to_grid/: package.xml  setup.cfg  setup.py
ros_ws/src/envision_pointcloud_to_grid/envision_pointcloud_to_grid/: goal_publisher.py  goal_viewer.py  navigation_node.py  pointcloud_to_occupancy_node.py
ros_ws/src/envision_pointcloud_to_grid/launch/: create_occupancy.launch.py  goal_publisher.launch.py  goal_viewer.launch.py  navigation.launch.py
ros_ws/src/image_masker/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/image_masker/image_masker/: image_masker.py
ros_ws/src/image_masker/launch/: image_masker.launch.py
ros_ws/src/install/: local_setup.sh  setup.bash  setup.sh
ros_ws/src/log/: latest_build
ros_ws/src/orbslam3/: .gitignore  CMakeLists.txt  package.xml
ros_ws/src/orbslam3/CMakeModules/: FindORB_SLAM3.cmake
ros_ws/src/orbslam3/config/stereo/: EuRoC.yaml
ros_ws/src/orbslam3/include/: utility.hpp
ros_ws/src/orbslam3/launch/: d435_rgbd.launch.py  d435_stereo.launch.py  esp32_stereo.launch.py  kitti_demo.launch.py
ros_ws/src/orbslam3/src/: utility.cc
ros_ws/src/orbslam3/src/kitti-stereo/: kitti-stereo-slam-node.cpp  kitti-stereo-slam-node.hpp  kitti-stereo.cpp
ros_ws/src/orbslam3/src/rgbd/: rgbd-slam-node.cpp  rgbd-slam-node.hpp  rgbd.cpp
ros_ws/src/orbslam3/src/stereo/: stereo-slam-node.cpp  stereo-slam-node.hpp  stereo.cpp
ros_ws/src/pointcloud_to_grid/: CMakeLists.txt  README.md  package.xml
ros_ws/src/pointcloud_to_grid/doc/: default.rviz
ros_ws/src/pointcloud_to_grid/include/: map_saver.hpp
ros_ws/src/pointcloud_to_grid/launch/: demo.launch.py
ros_ws/src/pointcloud_to_grid/src/: map_saver.cpp  pointcloud_to_grid_node.cpp
ros_ws/src/stereo_camera_pipeline/: setup.py
ros_ws/src/stereo_camera_pipeline/launch/: stereo_pipeline.launch.py
ros_ws/src/stereo_camera_pipeline/stereo_camera_pipeline/: publish_stereo.py  rectify_and_publish.py  stereo_processor_node.py
ros_ws/src/stereo_obstacle_detector/: README.md  package.xml  setup.cfg  setup.py
ros_ws/src/stereo_obstacle_detector/launch/: stereo_detector.launch.py
ros_ws/src/stereo_obstacle_detector/stereo_obstacle_detector/: stereo_obstacle_detector.py
scripts/: build_everything.sh  rebuild_essentials.sh
src/: stereo_processor_node.py  text_to_speech.py  text_to_speech_ubuntu.py
(+14 files in other folders)
