<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>orbslam3</name>
  <version>1.0.0</version>
  <description>ROS2 wrapper for ORB_SLAM3 library</description>
  <maintainer email="zang09@naver.com">Haebeom Jung</maintainer>
  <license>MIT</license>
  <author>Haebeom Jung</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>message_filters</depend>
  <depend>Pangolin</depend>
  <depend>rclpy</depend> 
  <exec_depend>python3-requests</exec_depend>

  <!-- Other dependencies your package might have -->
  <depend>image_transport</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <depend>envision_interfaces</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
